--- a/src/app/component/home/navbar/navbar.component.html
+++ b/src/app/component/home/navbar/navbar.component.html
@@ -1,45 +1,57 @@
-<ul class="nav justify-content-center">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Home</a>
-    
-    <ul class="list-group">
-        <li class="list-group-item">An active item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
-      </ul>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Shop</a>
-      <ul class="list-group">
-        <li class="list-group-item">An active item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
-      </ul>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Product</a>
-      <ul class="list-group">
-        <li class="list-group-item">An active item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
-      </ul>
-    </li>
-    <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Mega Menu</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pages</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Seller</a>
-      </li> -->
-  </ul>
+<div class="container-fluid d-flex justify-content-between">
+    <div class="row">
+        <button class="bg-success text-white" type="button"> All Category</button>
+    </div>
+    <div class="row">
+
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            
+            <ul class="list-group">
+                <li class="list-group-item">An active item</li>
+                <li class="list-group-item">A second item</li>
+                <li class="list-group-item">A third item</li>
+                <li class="list-group-item">A fourth item</li>
+                <li class="list-group-item">And a fifth one</li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Shop</a>
+              <ul class="list-group">
+                <li class="list-group-item">An active item</li>
+                <li class="list-group-item">A second item</li>
+                <li class="list-group-item">A third item</li>
+                <li class="list-group-item">A fourth item</li>
+                <li class="list-group-item">And a fifth one</li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Product</a>
+              <ul class="list-group">
+                <li class="list-group-item">An active item</li>
+                <li class="list-group-item">A second item</li>
+                <li class="list-group-item">A third item</li>
+                <li class="list-group-item">A fourth item</li>
+                <li class="list-group-item">And a fifth one</li>
+              </ul>
+            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link" href="#">Mega Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pages</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Seller</a>
+              </li> -->
+          </ul>
+
+    </div>
+</div>
+
+
+
